tests/errmsgs/tgeneral_excepts.nim
discard """
errormsg: "Only one general except clause is allowed after more specific exceptions"
"""

try:
  discard
except:
  discard
except:
  discard
